--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,14 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+
 	compile ('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+
+	compile("joda-time:joda-time")
+	runtime('com.h2database:h2:1.4.186')
+	runtime('mysql:mysql-connector-java:5.1.35')
+	compile("org.projectlombok:lombok:1.16.2")
+	compile("com.google.code.gson:gson:2.8.0")
+
 }
