--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,10 @@ dependencies {
 	runtime('mysql:mysql-connector-java:5.1.35')
 	compile('org.projectlombok:lombok:1.16.2')
 	compile('com.google.code.gson:gson:2.8.0')
-	
+	compile ('org.json:json:20090211')
+    compile ('com.fasterxml.jackson.core:jackson-databind') {
+		exclude group: 'com.fasterxml.jackson.core', module: 'jackson-annotations'
+	}
+	compile ('com.fasterxml.jackson.core:jackson-core')
+
 }
